Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29455

ibase plugin build fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.0
    • 5.1.0
    • SQL Support
    • None
    • linux-3.7.2 firebird-2.5.2+, gcc-4.7.2
    • f9bd36deac79e2950b3ac14d08284e7dfc53aaac

    Description

      commit 1580f558472e2c37936fe817fc546a79a8b0a9a5 breaks compile of ibase/firebird plugin

      var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:370:5: error: 'QIBaseResultPrivate' does not name a type
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:375:7: error: redefinition of 'class QIBaseResult'
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:350:7: error: previous definition of 'class QIBaseResult'
      In file included from ../../../../include/QtSql/5.1.0/QtSql/private/qsqlcachedresult_p.h:1:0,
      from /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:50:
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h: In constructor 'QIBaseResult::QIBaseResult(const QIBaseDriver*)':
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:97:30: error: 'QSqlCachedResultPrivate* QSqlCachedResult::d' is private
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:922:5: error: within this context
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:922:41: error: cannot convert 'QIBaseResultPrivate*' to 'QSqlCachedResultPrivate*' in assignment
      In file included from ../../../../include/QtSql/5.1.0/QtSql/private/qsqlcachedresult_p.h:1:0,
      from /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:50:
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h: In destructor 'virtual QIBaseResult::~QIBaseResult()':
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:97:30: error: 'QSqlCachedResultPrivate* QSqlCachedResult::d' is private
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:927:12: error: within this context
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:927:12: warning: possible problem detected in invocation of delete operator: [enabled by default]
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:927:12: warning: invalid use of incomplete type 'class QSqlCachedResultPrivate' [enabled by default]
      In file included from ../../../../include/QtSql/5.1.0/QtSql/private/qsqlcachedresult_p.h:1:0,
      from /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:50:
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:63:7: warning: forward declaration of 'class QSqlCachedResultPrivate' [enabled by default]
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:927:12: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined
      In file included from ../../../../include/QtSql/5.1.0/QtSql/private/qsqlcachedresult_p.h:1:0,
      from /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:50:
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h: In member function 'virtual bool QIBaseResult::prepare(const QString&)':
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:97:30: error: 'QSqlCachedResultPrivate* QSqlCachedResult::d' is private
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:935:5: error: within this context
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:935:6: error: invalid use of incomplete type 'class QSqlCachedResultPrivate'
      In file included from ../../../../include/QtSql/5.1.0/QtSql/private/qsqlcachedresult_p.h:1:0,
      from /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:50:
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:63:7: error: forward declaration of 'class QSqlCachedResultPrivate'
      ../../../../include/QtSql/5.1.0/QtSql/private/../../../../../../../qtbase/src/sql/kernel/qsqlcachedresult_p.h:97:30: error: 'QSqlCachedResultPrivate* QSqlCachedResult::d' is private
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:939:14: error: within this context
      /var/git/qtbase/src/sql/drivers/ibase/qsql_ibase.cpp:939:15: error: invalid use of incomplete type 'class QSqlCachedResultPrivate'

      I used a clean build tree

      a full compile log for the ibase pluginis attached

      Everything built ok 20130128

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mabrand Mark Brand
            treeve Treeve Jelbert
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes