qsql ibase: remove duplicate class definition

Follow-up to 1580f558472e2c37936fe817fc546a79a8b0a9a5

Task-number: QTBUG-29455
Change-Id: Id254a166ac901fb0cc0ba81db4bf1051a2acb53f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: f9bd36deac79e2950b3ac14d08284e7dfc53aaac https://github.com/qt/qtbase/commit/f9bd36deac79e2950b3ac14d08284e7dfc53aaac